    -In codec add 24/32bit image filter for LZW compressed images.
    -Cleanup codec statistics.
    -In some cases us pdflzw parser as image detector.
    -Fix exe parser for small input lenghts.
    -Fix deca parser and fix for small input lenghts.
    -In gif parser change min input size to 32 bytes.
    -Add .so extension to virtual exe group.
v139
    -In tga parser wait for data end.
    -In codec test 24/32 bit image pre-post transfom size.
    -Fix tiff parser, bad detection, crash.
    -Fix SZDD parser, incorect lenght when recompressing.
    -In codec add fail statistics. Show summary.
v138
    -Add zip reduce filter, not active.
    -Fix shrink filter.
    -Add zip implode filter, not active.
    -Move data statistic in to Codec.
    -Cosmetic change to type info.    
    -Fix silent transform fails, decompress not identical.
    -Fixes in SZDD parser.
    -In tiff parser ignore image if compressed and tag 279 is missing.
    -In pdflzw parser add FlateDecode detection only for non-image data
     and do some fixes.
v137
    -Show count of files in tar parser.
    -Fix iso parser for large files (+4G).
    -Fix mdf parser.
    -Fix cd parser.
    -Cleanup compare/extract log. Show final summary.
    -Add shrink/unshrink filter for .zip
    -Fix tiff parser.
    -Fix zip parser.
v136
    -Add InstallShield CAB parser (ver 5), contains zlib streams.
     Active for extension .cab
    -Add virutal file group for .cab extension
    -In PDFLzwParser add JPXDecode and JBIG2Decode as CMP type.
    -Re-enable .zip based extension parser
    -Add .tga based extension parser
    -In zip parser extract file extension and allow uncompressed files
    -In szddparser set min lenght to 128 bytes.
    -Fix bad parsing in mrbparser.
v135
    -In zlib parser set priority to 3 if possible image header was detected.
    -In iso parser show info about how many files are there.
v134
    -In png parser detect iCCP compressed chunk, test for grayscale